// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Collapsible/Integration Integration 1`] = `
<div
  className="rounded-lg border shadow p-2 max-w-prose"
>
  <h2
    className="text-xl font-bold"
  >
    <button
      className="rounded hover:bg-gray-200 mr-2 active:outline outline-blue-800 outline-2"
      onClick={[Function]}
      title="Expand"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-right fa-w-8 fa-fw transition-transform "
        data-icon="angle-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sr-only"
      >
        Expand
      </span>
    </button>
    A collapsible box
  </h2>
  <div
    className="box-border overflow-hidden"
    style={
      Object {
        "maxHeight": 0,
      }
    }
  >
    <div
      className="pt-2"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapsible/View Component Collapsed 1`] = `
<div
  className="rounded-lg border shadow p-2 max-w-prose"
>
  <h2
    className="text-xl font-bold"
  >
    <button
      className="rounded hover:bg-gray-200 mr-2 active:outline outline-blue-800 outline-2"
      title="Expand"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-right fa-w-8 fa-fw transition-transform "
        data-icon="angle-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sr-only"
      >
        Expand
      </span>
    </button>
    A collapsible box
  </h2>
  <div
    className="box-border overflow-hidden"
    style={
      Object {
        "maxHeight": 0,
      }
    }
  >
    <div
      className="pt-2"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapsible/View Component Expanded 1`] = `
<div
  className="rounded-lg border shadow p-2 max-w-prose"
>
  <h2
    className="text-xl font-bold"
  >
    <button
      className="rounded hover:bg-gray-200 mr-2 active:outline outline-blue-800 outline-2"
      title="Collapse"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-right fa-w-8 fa-fw transition-transform rotate-90"
        data-icon="angle-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="sr-only"
      >
        Collapse
      </span>
    </button>
    A collapsible box
  </h2>
  <div
    className="box-border overflow-hidden"
    style={
      Object {
        "maxHeight": "none",
      }
    }
  >
    <div
      className="pt-2"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
  </div>
</div>
`;
